kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: account-api
spec:
  type: ClusterIP
  selector:
    app: account-api
  ports:
    - name: http
      port: 80
      targetPort: 8080
